--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -19,3 +19,14 @@ body {
 header{ 
     color: white;
 }
+
+.halftitle{
+    background-color: rgba(3, 132, 131, 0.2);
+    padding-block: 5px;
+    padding-inline: 15px;
+}
+
+
+.pco {
+    color: rgba(3, 132, 131);
+}
